--- a/css/styles.css
+++ b/css/styles.css
@@ -48,8 +48,11 @@ background-color: #fff;
   max-width: 100%;
 height: auto;
 } */
-
-
+/* OUTLINE STYLES */
+*:focus{
+outline: 2px dashed #7296ec;
+outline-offset: 3px;
+}
 
 
 /* CONTAINER */
@@ -117,8 +120,24 @@ background-color: #F6F6F6;
  .currency-rates-type {
   color: #2959ce;
 }
-/* LANG-TOGGLE */
+/* GLOBAL-SEARCH-FORM */
+.global-search-form{
+  margin-left: 20%;
+}
 
+.global-search-form-input{
+  padding-top: 15px;
+  padding-right: 20px;
+  padding-bottom: 13px;
+  padding-left: 40px;
+  border: 0;
+  border-radius: 60px;
+  font-size: 14px;
+  line-height: normal;
+}
+
+
+/* LANG-TOGGLE */
 .lang-toggle {
   display: flex;
   margin-left: auto;
