--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,7 @@ background-color: #F6F6F6;
 } */
 /* SITE-HEADER-TOP */
 .site-header-top {
+margin-bottom: 10px;
   /* padding-top: 30px; */
   /* padding-bottom: 30px; */
   border-right-color: #f6f6f6;
@@ -190,4 +191,47 @@ background-color: #F6F6F6;
 }
 .button-primary:active {
   opacity: 0.6;
+}
+
+/* SITENAV */
+.satinav {
+  padding-top: 12px;
+  padding-bottom: 12px;
+border-bottom: 1px solid #d1d1d1;
+margin-bottom: 40px;
+font-size: 18px;
+font-weight: 500;
+line-height: normal;
+
+}
+.sitenav-list {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.sitenav-item{
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
+
+.sitenav-item:not(:last-child) {
+margin-right: 34px;
+}
+.sitenav-link {
+  display: block;
+  color:#7f7f7f;
+  text-decoration: none;
+}
+.sitenav-link:hover{
+color: #7296ec;
+}
+.sitenav-link:active{
+opacity: 0.6;
+}
+/* SITE-HEADER-BANNER */
+.site-header-banner-link {
+  display: flex;
 }
