--- a/css/styles.css
+++ b/css/styles.css
@@ -235,3 +235,86 @@ opacity: 0.6;
 .site-header-banner-link {
   display: flex;
 }
+.site-header-banner{
+  margin-left: 7%;
+}
+/* buni margin ni ozim loshdim */
+
+
+/* MAIN-CONTEND */
+.main-content {
+  flex-grow: 1;
+  padding-top: 50px;
+}
+
+/* NEWS-GRID  */
+.news-grid {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -10px;
+
+}
+.news-grid-item {
+  margin-right: 1%;
+  margin-left: 3%;
+  margin-bottom: 10px;
+  width: 393px;
+}
+.article-card {
+  display: flex;
+  flex-direction: column;
+  padding: 20px 17px 15px;
+  border: radius 15px;
+  background-color: #f6f6f6;
+}
+.article-card-title {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 20px;
+  line-height: 26px;
+  font-weight: 500;
+}
+.article-card-link {
+  display: inline-block;
+  color: #000;
+  text-decoration: none;
+}
+
+.article-card-link:hover{
+  color: #7296ec;
+}
+.article-card-link:active{
+  opacity: 0.6;
+}
+
+.acticle-card-text {
+  margin-top: 0;
+  margin-bottom: 15px;
+  color: #7f7f7f;
+}
+.article-card-img {
+  display: block;
+  width: 360px;
+  height: 165px;
+  margin-top: auto;
+  margin-bottom: 16px;
+  border-radius: 10px;
+  object-fit: cover;
+}
+.article-card-footer {
+  display: flex;
+  align-items: center;
+}
+.article-card-source-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  border-radius: 5px;
+}
+.article-card-source-time {
+  font-size: 12px;
+  line-height: normal;
+  color: #5e5f61;
+}
+.article-card-source {
+}
