--- a/css/styles.css
+++ b/css/styles.css
@@ -175,6 +175,7 @@ margin-bottom: 10px;
 .button-primary {
   display: inline-block;
   padding: 13px 20px;
+  border: 0;
   border-radius: 10px;
   font-weight: 500;
   line-height: normal;
@@ -190,6 +191,27 @@ margin-bottom: 10px;
   opacity: 0.8;
 }
 .button-primary:active {
+  opacity: 0.6;
+}
+
+.button-orage {
+  display: inline-block;
+  display: inline-block;
+  padding: 13px 20px;
+  border: 0;
+  border-radius: 10px;
+  font-weight: 500;
+  line-height: normal;
+  text-decoration: none;
+  text-align: center;
+  cursor: pointer;
+  background-color: #f78b3f;
+  color: white;
+}
+.button-orage:hover{
+  opacity: 0.8;
+}
+.button-orage:active{
   opacity: 0.6;
 }
 
@@ -251,7 +273,8 @@ opacity: 0.6;
 .news-grid {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -10px;
+  /* margin-left: -10px; */
+  /* margin-bottom: -10px; */
 
 }
 .news-grid-item {
@@ -316,5 +339,20 @@ opacity: 0.6;
   line-height: normal;
   color: #5e5f61;
 }
-.article-card-source {
+/* NOTIFICATION-CTA  */
+
+.notification-cta {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+padding: 25px 70px 25px 25px;
+margin: 60px 75px;
+border-radius: 10px;
+background-color:#ffd7ba;
+}
+.notification-cta-text {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 26px;
+  color: #000;
 }
