--- a/css/styles.css
+++ b/css/styles.css
@@ -214,6 +214,12 @@ margin-bottom: 10px;
 .button-orage:active{
   opacity: 0.6;
 }
+.button-block{
+  margin-left: 60px;
+  border-radius: 15px;
+display: block;
+width: 100%;
+}
 
 /* SITENAV */
 .satinav {
@@ -230,8 +236,9 @@ line-height: normal;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  margin-left: 50px;
   padding: 0;
-  margin: 0;
+  /* margin: 0; */
   list-style: none;
 }
 .sitenav-item{
@@ -267,6 +274,7 @@ opacity: 0.6;
 .main-content {
   flex-grow: 1;
   padding-top: 50px;
+  padding-bottom: 100px;
 }
 
 /* NEWS-GRID  */
@@ -355,4 +363,180 @@ background-color:#ffd7ba;
   font-weight: 500;
   line-height: 26px;
   color: #000;
+}
+/* GLOBAL-NEW */
+
+
+.global-news-heading {
+  margin-left: 50px;
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: normal;
+  color: #000;
+
+}
+.news-lint {
+  display: flex;
+  flex-direction: column;
+  margin-left: 50px;
+  margin-bottom: 15px;
+}
+
+.news-list-item:not(:last-child) {
+  margin-bottom: 10px;
+}
+/* ARTICLE-CARD-HORIZONTAL  */
+.article-card-horizontal {
+  display: flex;
+  align-items:flex-start;
+  padding: 20px;
+border-radius: 15px;
+background-color: #F6F6F6;
+}
+
+
+.acticle-card-horizontal-img {
+width: 210px;
+height: 165px;
+margin-right: 15px;
+border-radius: 10px;
+object-fit: cover;
+}
+.article-card-horizonttal-content {
+  flex-grow: 1;
+}
+.article-card-horizontal-title {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 20px;
+  height: 26px;
+  font-weight: 500;
+}
+.article-horizontal-link {
+  display:inline-block;
+color: #000;
+text-decoration: none;
+}
+.article-horizontal-link:hover{
+  color: #7296ec;
+}
+.article-horizontal-link:active{
+opacity: 0.06;
+}
+
+.article-horizontal-text {
+  margin-top: 49px;
+  margin-bottom: 60px;
+  font-size: 16px;
+  height: 22px;
+}
+.article-card-horizontal-footer {
+  display: flex;
+  align-items: center;
+}
+.article-card-horizontal-source-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+.article-card-horizontal-source-time {
+  font-size: 12px;
+  line-height: normal;
+  color: #5e5f61;
+}
+.news-list-more-button{
+  padding: 17px;
+}
+/* LAYOUT */
+.layout-2-1{
+  display: flex;
+  align-items: flex-start;
+}
+
+.layout-2-1-main{
+  width: 797px;
+  margin-right: 10px;
+}
+.layout-2-1-sidebar{
+  width: 393px;
+  margin-top: 49px;
+}
+
+.layout-2-1-sidebar-item:not(last-child){
+margin-bottom: 10px;
+}
+
+/* SIDEBAR-NEWS-CARD */
+
+.sidebar-news-card {
+  padding: 20px;
+  border-radius: 15px;
+  background-color: #f6f6f6;
+  color: #000;
+}
+.sidebar-news-card-headinng {
+  margin-top: 0;
+  margin-bottom: 25px;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+}
+.sidebar-news-card-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.sidebar-news-card-item {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.sidebar-news-card-item:first-child{
+  padding-top: 0;
+}
+.sidebar-news-card-item:last-child{
+  padding-top: 0;
+}
+
+.sidebar-news-card-item:not(last-child){
+  border-bottom: 1px solid #d2d2d2
+}
+
+.sidebar-news-card-title {
+  margin-top: 0;
+  margin-bottom: 8px;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+}
+.sidebar-news-card-link {
+  display: inline-block;
+  color: #000;
+  text-decoration: none;
+}
+
+.sidebar-news-card-link:hover{
+  color: #7296ec;
+}
+.sidebar-news-card-link:active{
+opacity: 0.06;
+}
+
+.sidebar-news-card-source-time {
+  font-size: 13px;
+  line-height: normal;
+  color: #5e5f61;
+}
+/* SIDEBAR-AD  */
+.sidebar-ad-link{
+display: flex;
+}
+.sidebar-ad-img{
+  width: 393px;
+  height: 338px;
+  object-fit: cover;
+  border-radius: 15px;
 }
