--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,10 @@ margin-bottom: 10px;
   border-radius: 60px;
   font-size: 14px;
   line-height: normal;
+  background-image: url(../img/-iconsearch.svg);
+  background-repeat: no-repeat;
+background-size: 20px;
+background-position: 15px center;
 }
 
 
@@ -226,12 +230,15 @@ width: 100%;
   padding-top: 12px;
   padding-bottom: 12px;
 border-bottom: 1px solid #d1d1d1;
-margin-bottom: 40px;
 font-size: 18px;
 font-weight: 500;
 line-height: normal;
-
 }
+
+.satinav:not(last-child) {
+  margin-bottom: 40px;
+}
+
 .sitenav-list {
   display: flex;
   flex-wrap: wrap;
@@ -357,6 +364,10 @@ padding: 25px 70px 25px 25px;
 margin: 60px 75px;
 border-radius: 10px;
 background-color:#ffd7ba;
+background-image: url(../img/global-notifications-bg.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+background-position: center center;
 }
 .notification-cta-text {
   font-size: 20px;
@@ -541,6 +552,10 @@ display: flex;
   border-radius: 15px;
 }
 
+.sidebar-ad-img-tall {
+  height: 553px;
+}
+
 /* SITE-FOOTER  */
 
 .site-footer {
@@ -648,4 +663,108 @@ font-weight: 500;
   width: 25px;
   height: 25px;
   object-fit: contain;
+}
+
+/* FORM  */
+.form-groups-wrappers {
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-groups-wrappers:not(last-child) {
+  margin-bottom: 10px;
+  }
+
+.form-groups-wrappers .form-group {
+  width: calc(50% - 3px);
+  margin-bottom: 0;
+}
+
+.form-group:not(last-child) {
+margin-bottom: 10px;
+}
+
+.form-field {
+  display: block;
+  width: 100%;
+  padding: 18px 20px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+
+.form-field-textarea {
+  min-height: 180px;
+resize: vertical;
+}
+/* DEFINITIONS-CARD  */
+.definitions-card {
+  padding: 20px 25px;
+  margin: 0;
+  border-radius: 10px;
+  background-color: #f6f6f6;
+  color: #000;
+}
+.definitions-card-item {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.definitions-card-item:not(:last-child) {
+  border-bottom: 1px solid #d2d2d2;
+}
+
+.definitions-card-title {
+  margin-bottom: 7px;
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 900;
+}
+.definitions-card-value {
+  font-size: 16px;
+  line-height: 18px;
+  margin: 0;
+}
+
+
+/* CONTACT-PAGE  */
+.contact-page-heading {
+  margin-top: 0;
+  margin-left: 50px;
+  margin-bottom: 20px;
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 500;
+  color: #000;
+}
+
+.contact-page-content {
+  display: flex;
+  margin-left: 50px;
+}
+
+.contact-page-form {
+  display: flex;
+  flex-direction: column;
+  width: 696px;
+}
+
+.contact-page-form-submit {
+  align-self: flex-end;
+margin-top: 10px;
+}
+.contact-page-info {
+width: 494px;
+margin-left: 10px;
+}
+/* RETINA-BGS */
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) {
+.notification-cta {
+  background-image: url(../img/global-notifications-bg2x.jpg);
+}
 }
