--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,8 @@ html {
   box-sizing: border-box;
 }
 body {
-/* height: 100%; */
+/* height: 100%;
+width: 100%; */
 padding: 0;
 margin: 0;
 font-family:"Rubik","Arial", serif;
@@ -33,6 +34,17 @@ height: auto;
 *:focus{
 outline: 2px dashed var(--accennt-color);
 outline-offset: 3px;
+}
+/* VISUALLYHIDDEN  */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 
@@ -168,6 +180,12 @@ background-position: 15px center;
   text-align: center;
   cursor: pointer;
 }
+ .button-lage{
+  padding: 15px 40px;
+font-size: 24px;
+line-height: 28px;
+ }
+
 .button-primary {
   background-color:var(--accennt-color);
   color: #fff;
@@ -181,8 +199,8 @@ background-position: 15px center;
 
 .button-orage {
   display: inline-block;
-  display: inline-block;
   padding: 13px 20px;
+  margin-left: 40%;
   border: 0;
   border-radius: 10px;
   font-weight: 500;
@@ -737,6 +755,80 @@ margin-top: 10px;
 width: 494px;
 margin-left: 10px;
 }
+
+
+
+/* MODAL*/
+.modal {
+  display: none;
+ position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 40px;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  }
+
+  .modal-open {
+    display: block;
+  }
+
+  .modal-dialog {
+    width: 100%;
+    max-width: 850px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+  }
+
+  .modal-content {
+    position: relative;
+    z-index: 1;
+    padding: 50px;
+    border-radius: 20px;
+    background-color: #fff;
+  }
+
+  .modal-close {
+    position: absolute;
+    z-index: 1;
+    right: 20px;
+    top: 20px;
+    padding: 0;
+    border: 0;
+    background-color: transparent;
+    cursor: pointer;
+  }
+  .modal-close:hover {
+    opacity: 0.8;
+  }
+  .modal-close:active {
+    opacity: 0.6;
+  }
+
+  .modal-close-icon {
+    display: block;
+  }
+
+  .modal-lead {
+    margin-top: 0;
+    margin-bottom: 25px;
+    font-size: 26px;
+    line-height: 35px;
+    font-weight: 600;
+    text-align: center;
+    color: #000;
+  }
+
+  .modal-action {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  }
+
 /* RETINA-BGS */
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
